# subliminal-steering

./: .gitignore  Plan.md  README.md  main.py  requirements  requirements.txt  run_cpu_experiment.py  run_experiment_a.ipynb  run_gpu_experiment.py
data/: data1.csv  data1_qwen1_5.csv  data2.csv  data2_qwen1_5.csv
data/v2/: data_base_numeric.csv  data_owl_numeric.csv  steering_vector_V.pt
experiment/: Testing_Code.ipynb  Untitled0.ipynb  basemodel.py
gpu_experiment_output/: experiment_results.pkl
gpu_experiment_output/data/: data1_raw.json  data2_aligned.csv  prepared_dataset.csv  prepared_dataset.pkl
gpu_experiment_output/steering/: steering_vectors.pkl  steering_vectors_control_one_sided.pkl  steering_vectors_control_random.pkl  steering_vectors_control_reversed.pkl
output/data/: data1_aligned.csv
owls/experiments/: Subliminal Learning.ipynb  Subliminal_Learning.py  (+10 more)
refactor/subliminal_refactor/: README.md  pyproject.toml
refactor/subliminal_refactor/docs/: STYLEGUIDE.md
refactor/subliminal_refactor/examples/: quickstart.py
refactor/subliminal_refactor/src/subliminal/: __init__.py  activation_patching.py  config.py  modeling.py  pipeline.py  steering.py  tokens.py  utils.py
results/: owl_entanglement_all_layers.csv  steering_eval_results_5000.csv
src/: complete_experiment_notebook.ipynb  prepare_data.py  prepare_models.py  probe_trait.py  run_experiment.py  steering_analysis_notebook.ipynb  steering_vectors.py  utils.py  utils_io.py
steering/: data_loader.py  embeddings.py  evaluation.py  steering_model.py  steering_vector.py  visualize.py
(+2 files in other folders)
