[project]
name = "subliminal"
version = "0.1.0"
description = "Refactored modules for the Subliminal Learning project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["transformers>=4.41.0","numpy"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
